@@ -1,4 +1,7 @@
 Run [% run %] has a status of run complete in NPG tracking.
+(The sequencing instrument has finished imaging. It will complete basecalling soon.
+Alignments and QC metrics will then proceed automatically followed by a manual
+QC process and archival to iRODS).
 
 From the database system, the following project has the following lanes on this run
 
@@ -10,12 +13,9 @@ Lanes:
 Lane - [% lane.position %] : Library - [% lane.library %]
 [% END -%]
 
-You will be notified when this run reaches run archived.
-
+You will be notified when this run reaches run archived (this will vary from one
+day for a small high priority run to a fortnight for a large normal priority run).
 In the mean time, you can check the status of the run through NPG:
-
 [% PROCESS npg_tracking_web_url.tt2 %]/run/[% run %]
 
-Yours Faithfully
-
-New Pipeline Development
+NPG, DNA Pipelines Informatics
